gcc/testsuite/rust/rustc/ui/async-await/issues/issue-78654.rs
// edition:2018
// revisions: full min

#![cfg_attr(full, feature(const_generics))]
#![cfg_attr(full, allow(incomplete_features))]
#![cfg_attr(min, feature(min_const_generics))]

struct Foo;

impl<const H: feature> Foo {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
    async fn biz() {}
}

fn main() {}

